--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				</a>
 			</li>
 			<li style="--t:30%;">
-				<a href="#">
+				<a href="index3.html">
 					<i class="fa fa-th-large" aria-hidden="true"></i>
 				</a>
 			</li>
