--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				</a>
 			</li>
 			<li style="--t:40%;">
-				<a href="#">
+				<a href="index4.html">
 					<i class="fa fa-shopping-bag" aria-hidden="true"></i>
 				</a>
 			</li>
